desenvolvimento do html e css

--- a/index.html
+++ b/index.html
@@ -2,10 +2,40 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf-8">
-        <link class="stylesheet" src="./css/style.css">
+        <link rel="stylesheet" type="text/css" href="./style/main.css">
+        <script src=""></script>
+
         <title>BoomerFlix</title>
     </head>
     <body>
+        <header>
+            <div class="container">
+                <h2 class="logo">BOOMERFLIX</h2>
+                <nav>
+                    <a href="#">Início</a>
+                    <a href="#">Séries</a>
+                    <a href="#">Anos 70</a>
+                    <a href="#">Anos 80</a>
+                </nav>
+            </div>
+        </header>
+
+        <main>
+            <div class="desenho-principal">
+                <div class="container">
+                    <h3 class="titulo">Coragem o Cão Covarde</h3>
+                    <p class="descricao">Coragem é um cão incrivelmente tímido e muito fácil de assustar que precisa defender um velho casal de aposentados de acontecimentos paranormais que ameaçam a segurança e a estabilidade da sua casa.</p>
+                    <div class="botoes">
+                        <button role="button" class="botao">
+                            ASSISTIR AGORA
+                        </button>
         
+                        <button role="button" class="botao">
+                            MAIS INFORMAÇÕES
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
