incremento html/css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="./style/main.css">
         <script src=""></script>
+        <script src="https://kit.fontawesome.com/7580077756.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Paytone+One&display=swap" rel="stylesheet">
 
         <title>BoomerFlix</title>
     </head>
@@ -27,10 +31,12 @@
                     <p class="descricao">Coragem é um cão incrivelmente tímido e muito fácil de assustar que precisa defender um velho casal de aposentados de acontecimentos paranormais que ameaçam a segurança e a estabilidade da sua casa.</p>
                     <div class="botoes">
                         <button role="button" class="botao">
+                            <i class="fas fa-play"></i>
                             ASSISTIR AGORA
                         </button>
         
                         <button role="button" class="botao">
+                            <i class="fa-solid fa-circle-info"></i>
                             MAIS INFORMAÇÕES
                         </button>
                     </div>
