--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="./style/main.css">
-        <script src=""></script>
-        <script src="https://kit.fontawesome.com/7580077756.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Paytone+One&display=swap" rel="stylesheet">
+
+        <!--owl css-->
+        <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+        <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
 
         <title>BoomerFlix</title>
     </head>
@@ -42,6 +44,65 @@
                     </div>
                 </div>
             </div>
+
+            <div class="carrosel-desenhos">
+                <div class="owl-carousel owl-theme">
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura1.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura2.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura3.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura4.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura5.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura6.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura7.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura8.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura9.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura10.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura11.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura12.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                </div>
+            </div>
         </main>
+
+        <script src="https://kit.fontawesome.com/7580077756.js" crossorigin="anonymous"></script>
+        <script src="js/owl/jquery.min.js"></script>
+        <script src="js/owl/owl.carousel.min.js"></script>
+        <script src="js/owl/setup.js"></script>
+
     </body>
 </html>
