--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Paytone+One&display=swap" rel="stylesheet">
 
+        <!--responsive-->
+        <link rel="stylesheet" href="style/responsive.css">
+
+
         <!--owl css-->
         <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
         <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
