--- a/index.html
+++ b/index.html
@@ -48,8 +48,65 @@
                     </div>
                 </div>
             </div>
-
+            
+            <!--Carousel Desenhos-->
             <div class="carrosel-desenhos">
+                <h3>Desenhos</h3>
+                <div class="owl-carousel owl-theme">
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura1.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura2.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura3.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura4.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura5.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura6.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura7.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura8.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura9.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura10.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura11.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <img class="box-desenho" src="img/miniatura12.jpg" alt="" srcset="">
+                        <h4>1</h4>
+                    </div>
+                </div>
+            </div>
+
+            <!--Carousel Séries-->
+            <div class="carrosel-series">
+                <h3>Séries</h3>
                 <div class="owl-carousel owl-theme">
                     <div class="item">
                         <img class="box-desenho" src="img/miniatura1.jpg" alt="" srcset="">
