--- a/index.html
+++ b/index.html
@@ -55,51 +55,39 @@
                 <div class="owl-carousel owl-theme">
                     <div class="item">
                         <img class="box-desenho" src="img/miniatura1.jpg" alt="" srcset="">
-                        <h4>1</h4>
                     </div>
                     <div class="item">
                         <img class="box-desenho" src="img/miniatura2.jpg" alt="" srcset="">
-                        <h4>1</h4>
                     </div>
                     <div class="item">
                         <img class="box-desenho" src="img/miniatura3.jpg" alt="" srcset="">
-                        <h4>1</h4>
                     </div>
                     <div class="item">
                         <img class="box-desenho" src="img/miniatura4.jpg" alt="" srcset="">
-                        <h4>1</h4>
                     </div>
                     <div class="item">
                         <img class="box-desenho" src="img/miniatura5.jpg" alt="" srcset="">
-                        <h4>1</h4>
                     </div>
                     <div class="item">
                         <img class="box-desenho" src="img/miniatura6.jpg" alt="" srcset="">
-                        <h4>1</h4>
                     </div>
                     <div class="item">
                         <img class="box-desenho" src="img/miniatura7.jpg" alt="" srcset="">
-                        <h4>1</h4>
                     </div>
                     <div class="item">
                         <img class="box-desenho" src="img/miniatura8.jpg" alt="" srcset="">
-                        <h4>1</h4>
                     </div>
                     <div class="item">
                         <img class="box-desenho" src="img/miniatura9.jpg" alt="" srcset="">
-                        <h4>1</h4>
                     </div>
                     <div class="item">
                         <img class="box-desenho" src="img/miniatura10.jpg" alt="" srcset="">
-                        <h4>1</h4>
                     </div>
                     <div class="item">
                         <img class="box-desenho" src="img/miniatura11.jpg" alt="" srcset="">
-                        <h4>1</h4>
                     </div>
                     <div class="item">
                         <img class="box-desenho" src="img/miniatura12.jpg" alt="" srcset="">
-                        <h4>1</h4>
                     </div>
                 </div>
             </div>
@@ -109,52 +97,37 @@
                 <h3>Séries</h3>
                 <div class="owl-carousel owl-theme">
                     <div class="item">
-                        <img class="box-desenho" src="img/miniatura1.jpg" alt="" srcset="">
-                        <h4>1</h4>
+                        <img class="box-desenho" src="img/series/min1.jpg" alt="" srcset="">
                     </div>
                     <div class="item">
-                        <img class="box-desenho" src="img/miniatura2.jpg" alt="" srcset="">
-                        <h4>1</h4>
+                        <img class="box-desenho" src="img/series/min2.jpg" alt="" srcset="">
                     </div>
                     <div class="item">
-                        <img class="box-desenho" src="img/miniatura3.jpg" alt="" srcset="">
-                        <h4>1</h4>
+                        <img class="box-desenho" src="img/series/min3.jpg" alt="" srcset="">
                     </div>
                     <div class="item">
-                        <img class="box-desenho" src="img/miniatura4.jpg" alt="" srcset="">
-                        <h4>1</h4>
+                        <img class="box-desenho" src="img/series/min4.jpg" alt="" srcset="">
                     </div>
                     <div class="item">
-                        <img class="box-desenho" src="img/miniatura5.jpg" alt="" srcset="">
-                        <h4>1</h4>
+                        <img class="box-desenho" src="img/series/min5.jpg" alt="" srcset="">
                     </div>
                     <div class="item">
-                        <img class="box-desenho" src="img/miniatura6.jpg" alt="" srcset="">
-                        <h4>1</h4>
+                        <img class="box-desenho" src="img/series/min6.jpg" alt="" srcset="">
                     </div>
                     <div class="item">
-                        <img class="box-desenho" src="img/miniatura7.jpg" alt="" srcset="">
-                        <h4>1</h4>
+                        <img class="box-desenho" src="img/series/min7.jpg" alt="" srcset="">
                     </div>
                     <div class="item">
-                        <img class="box-desenho" src="img/miniatura8.jpg" alt="" srcset="">
-                        <h4>1</h4>
+                        <img class="box-desenho" src="img/series/min8.jpg" alt="" srcset="">
                     </div>
                     <div class="item">
-                        <img class="box-desenho" src="img/miniatura9.jpg" alt="" srcset="">
-                        <h4>1</h4>
+                        <img class="box-desenho" src="img/series/min9.jpg" alt="" srcset="">
                     </div>
                     <div class="item">
-                        <img class="box-desenho" src="img/miniatura10.jpg" alt="" srcset="">
-                        <h4>1</h4>
+                        <img class="box-desenho" src="img/series/min10.jpg" alt="" srcset="">
                     </div>
                     <div class="item">
-                        <img class="box-desenho" src="img/miniatura11.jpg" alt="" srcset="">
-                        <h4>1</h4>
-                    </div>
-                    <div class="item">
-                        <img class="box-desenho" src="img/miniatura12.jpg" alt="" srcset="">
-                        <h4>1</h4>
+                        <img class="box-desenho" src="img/series/min11.jpg" alt="" srcset="">
                     </div>
                 </div>
             </div>
