--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <h2 class="logo">BOOMERFLIX</h2>
                 <nav>
                     <a href="#">Início</a>
+                    <a href="#">Desenhos</a>
                     <a href="#">Séries</a>
-                    <a href="#">Anos 70</a>
                     <a href="#">Anos 80</a>
                 </nav>
             </div>
